Ingest REMS add_entitlement webhook to initialize ProjectConsent
