# swagger.yaml
@@ -58,41 +58,6 @@ paths:
           schema:
             $ref: "#/definitions/Error"
 
-  /participants/{study_identifier}/initialize_project_consent:
-    # TODO what if participant is a part of multiple datasets? Should we be keeping track of catalogue-item as well?
-    post:
-      operationId: initialize_project_consent
-      summary: Initialize project-specific consents for a participant
-      parameters:
-        - $ref: '#/parameters/study_identifier'
-        - name: project_consent_initialization
-          in: body
-          schema:
-            $ref: '#/definitions/ProjectConsentInitialization'
-            example:
-              project_application_id: 0
-      responses:
-        201:
-          description: Project consent created
-          schema:
-            $ref: '#/definitions/ProjectConsentInitialization'
-          headers:
-            Location:
-              type: string
-              format: url
-        403:
-          description: Forbidden to duplicate a project consent initialization
-          schema:
-            $ref: "#/definitions/Error"
-        404:
-          description: Participant not found
-          schema:
-            $ref: "#/definitions/Error"
-        500:
-          description: Internal error - project consent not created
-          schema:
-            $ref: "#/definitions/Error"
-
   /participants/{study_identifier}/project_consents:
     get:
       operationId: get_project_consents_by_participant
@@ -140,11 +105,37 @@ paths:
           schema:
             $ref: '#/definitions/ProjectConsent'
         404:
-          description: Project consent not found. To create a new project consent, see the /participants/{study_identifier}/initialize_project_consent endpoint
+          description: Project consent not found. To create a new project consent, see the /rems/add_entitlement endpoint
           schema:
             $ref: "#/definitions/Error"
         500:
           description: Internal error - project consent not updated
+          schema:
+            $ref: "#/definitions/Error"
+
+  /rems/add_entitlement:
+    post:
+      operationId: add_rems_entitlement
+      summary: Ingests the REMS webhook that informs of the addition of new entitlement. May initialize a new ProjectConsent.
+      parameters:
+        - name: rems_entitlement
+          in: body
+          schema:
+            $ref: '#/definitions/RemsEntitlement'
+            example:
+              application: 137
+              user: "username"
+              resource: "bf3ba75b-8dfe-4619-b832-31c4a087a589"
+              email: "bob@example.com"
+      responses:
+        202:
+          description: Addition of Entitlement accepted for processing
+        404:
+          description: Resource not found
+          schema:
+            $ref: "#/definitions/Error"
+        500:
+          description: Internal error - Entitlement not accepted for processing.
           schema:
             $ref: "#/definitions/Error"
 
@@ -221,26 +212,29 @@ definitions:
         type: boolean
         description: (T/F)- Participant has consented to having this project access their clinical data?
         example: false
-  ProjectConsentInitialization:
+  RemsEntitlement:
     type: object
     required:
-      - project_application_id
+      - application
+      - resource
     properties:
-      project_application_id:
+      application:
         type: integer
         format: int32
-        description: REMS ID for the data access application associated with the project
+        description: REMS ID for the data access application associated with the entitlement
         minimum: 0
         example: 0
-      study_identifier:
+      user:
+        type: string
+        description: REMS username for the user granted the entitlement
+        example: "username"
+      resource:
         type: string
         format: uuid
-        description: UUID for the participant whose consents are being initialized
-        example: bf3ba75b-8dfe-4619-b832-31c4a087a589
-        readOnly: true
-      status:
+        description: The "resource name" for the object of the entitlement in REMS, ex. a URN. In this draft of the API, it should be a {study_identifier} uuid.
+        example: "bf3ba75b-8dfe-4619-b832-31c4a087a589"
+      email:
         type: string
-        enum: [Complete]
-        description: Specifies default consent choices for genetic data. Options- Complete
-        example: "Complete"
-        readOnly: true
+        format: email
+        description: The email of the user granted the entitlement
+        example: "bob@example.com"
